force-app/main/default/objects/API_Call_Details__c/API_Call_Details__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores all API, client key, secret key for API calls</description>
    <label>API Call Details</label>
</CustomObject>