force-app/main/default/objects/API_Call_Details__c/fields/API_Request_Timeout__c.field-meta.xml
<CustomField>
    <fullName>API_Request_Timeout__c</fullName>
    <description>API Request Timeout</description>
    <inlineHelpText>API Request Timeout</inlineHelpText>
    <label>API Request Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>