force-app/main/default/objects/API_Call_Details__c/fields/AuthorizationtUrl__c.field-meta.xml
<CustomField>
    <fullName>AuthorizationtUrl__c</fullName>
    <description>AuthorizationtUrl</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>AuthorizationtUrl</inlineHelpText>
    <label>AuthorizationtUrl</label>
    <length>100</length>
    <type>Text</type>
</CustomField>