force-app/main/default/objects/API_Call_Details__c/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <description>Client ID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Client ID</inlineHelpText>
    <label>Client ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>