force-app/main/default/objects/API_Call_Details__c/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <description>Client Secret</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Client Secret</inlineHelpText>
    <label>Client Secret</label>
    <length>100</length>
    <type>Text</type>
</CustomField>