force-app/main/default/objects/API_Call_Details__c/fields/PDF_API_URL__c.field-meta.xml
<CustomField>
    <fullName>PDF_API_URL__c</fullName>
    <description>API URL</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>API URL</inlineHelpText>
    <label>API URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>