force-app/main/default/objects/API_Call_Details__c/fields/Proxy_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Proxy_Client_ID__c</fullName>
    <description>Proxy Client ID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Proxy Client ID</inlineHelpText>
    <label>Proxy Client ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>