force-app/main/default/objects/API_Call_Details__c/fields/Scope_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Scope_Prefix__c</fullName>
    <description>Scope Prefix</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Scope Prefix</inlineHelpText>
    <label>Scope Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>