force-app/main/default/objects/API_Call_Details__c/fields/Scope_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Scope_Suffix__c</fullName>
    <description>Scope Suffix</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Scope Suffix</inlineHelpText>
    <label>Scope Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>