force-app/main/default/objects/API_Call_Details__c/fields/Tenand_ID__c.field-meta.xml
<CustomField>
    <fullName>Tenand_ID__c</fullName>
    <description>Tenand ID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Tenand ID</inlineHelpText>
    <label>Tenand ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>